# otus-02-galaxy

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: galaxy.yml
AsyncRunner/: AsyncRunner.cpp  AsyncRunner.h  BlockingQueue.cpp  BlockingQueue.h  HardStopCommand.cpp  HardStopCommand.h  SoftStopCommand.cpp  SoftStopCommand.h  StartCommand.cpp  StartCommand.h
AsyncRunner.test/: AsyncRunner_test.cpp
GameServer/: CMakeLists.txt  main.cpp
IoC/: IoC.cpp  IoC.h  Scope.cpp  ScopeHolder.cpp  ScopeHolder.h
commands/: CheckFuel.cpp  IocNewScopeCommand.cpp  IocRegisterCommand.cpp  IocSetScopeRelativeCommand.cpp  LogExceptionHandler.h  MacroCommand.cpp  MacroCommand.h  Move.cpp  Move.h  RepeatHandler.h  RepeatTwice.cpp  RepeatTwice.h  RepeatTwiceHandler.cpp  RepeatTwiceHandler.h  Rotate.cpp
exceptions/: NotEnoughFuel.cpp  RuntimeError.h  UnavailableAction.cpp  UnavailableAction.h
include/: Action.h  Angle.h  ExceptionHandler.h  ICommandQueue.h  ICommandQueueBuilder.h  IExceptionHandler.h  IFuelObject.h  ILog.h  IMoveObject.h  IMovementDirectionObject.h  IMovingObject.h  IRotatingObject.h  Move.h  MoveAction.h  Rotate.h  RotateAction.h  Runner.h
include/commands/: BurnFuel.h  ChangeMovementDirection.h  CheckFuel.h  LogException.h  LogExceptionHandler.h  QueueCommand.h  Repeat.h  RepeatCommand.h  RepeatHandler.h  Rotate.h  WriteExceptionToLog.h
include/exceptions/: FailedRepeat.h  InvalidArgument.h  NotEnoughFuel.h  RepeatFailException.h
include/primitives/: FuelLevel.h
primitives/: Vector2D.cpp  Vector2D.h
source/: Angle.cpp  ExceptionHandler.cpp  Move.cpp  MoveAction.cpp  Rotate.cpp  RotateAction.cpp  Runner.cpp
source/commands/: BurnFuel.cpp  ChangeMovementDirection.cpp  CheckFuel.cpp  LogException.cpp  LogExceptionHandler.cpp  Move.cpp  QueueCommand.cpp  Repeat.cpp  RepeatCommand.cpp  RepeatHandler.cpp  RepeatTwice.cpp  WriteExceptionToLog.cpp
source/exceptions/: FailedRepeat.cpp  RepeatFailException.cpp
source/primitives/: FuelLevel.cpp
tests/: Angle_test.cpp  BurnFuel_test.cpp  ChangeMovementDirection_test.cpp  CheckFuel_test.cpp  FallbackCommand_test.cpp  IoC_test.cpp  IocNewScopeCommand_test.cpp  IocRegisterCommand_test.cpp  IocSetScopeAbsoluteCommand_test.cpp  IocSetScopeRelativeCommand_test.cpp  LogExceptionHandler_test.cpp  LogException_test.cpp  MacroCommand_test.cpp  MacroCommand_test.h  Move_test.cpp  QueueCommand_test.cpp  RepeatHandler_test.cpp  Repeat_test.cpp  Rotate_test.cpp  Runner_test.cpp  Scenarios_test.cpp  StraightLineMovement_test.cpp  Vector2D_test.cpp  WriteExceptionToLog_test.cpp  main.cpp
tests/include/: ICommandQueueBuilder_mock.h  ICommandQueue_mock.h  IExceptionHandler_mock.h  IFuelObject_mock.h  IMovingObject_mock.h
tests/mock/: IFuelObject_mock.h  ILog_mock.h  IMovementDirectionObject_mock.h  IRotatingObject_mock.h  IScope_mock.h
